# C:\Users\Acer\source\repos\pi-stack-risk-model\risk_wasm\Cargo.toml

[package]
name = "risk_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] 

[dependencies]
wasm-bindgen = "0.2"

# Wasm-compatible rand dependency
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

# CORRECTED VERSION to support the 'use_panic_hook' feature
console_error_panic_hook = { version = "0.1.6", optional = true }